<resources>
    <string name="app_name">Reinforcement</string>

    <!-- Navigation items -->
    <string name="nav_daily_goals">Objetivos</string>
    <string name="nav_schedule">Horario</string>
    <string name="nav_todo">To-Do</string>
    <string name="nav_cigarettes">Cigarros</string>
    <string name="nav_points">Puntos</string>

    <!-- Daily Goals Section -->
    <string name="daily_goals_title">Objetivos diarios:</string>
    <string name="physical_goal">Victoria física:</string>
    <string name="physical_goal_run">Salir a correr</string>
    <string name="physical_goal_gym">Ir al gimnasio</string>
    <string name="mental_goal">Victoria mental:</string>
    <string name="mental_goal_read">Leer</string>
    <string name="mental_goal_write">Escribir</string>
    <string name="mental_goal_learn">Aprender algo nuevo</string>
    <string name="discipline_goal">Victoria académica:</string>
    <string name="discipline_goal_class">Ir a clase</string>
    <string name="discipline_goal_study">Estudiar</string>
    <string name="discipline_goal_company">Empresa</string>

    <!-- Motivational phrases -->
    <string-array name="motivational_phrases">
        <item>El éxito es la suma de pequeños esfuerzos repetidos día tras día.</item>
        <item>No cuentes los días, haz que los días cuenten.</item>
        <item>Lo que haces hoy puede mejorar todos tus mañanas.</item>
        <item>Pequeños cambios eventualmente suman grandes resultados.</item>
        <item>La autodisciplina es el factor más importante del éxito.</item>
    </string-array>

    <!-- Schedule Section -->
    <string name="schedule_title">Horario:</string>
    <string name="yesterday">Ayer</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>

    <!-- Todo Section -->
    <string name="todo_title">To-Do List:</string>
    <string name="add_task">Añadir tarea</string>
    <string name="task_title">Título de la tarea</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="previous_day">Día anterior</string>
    <string name="next_day">Día siguiente</string>

    <!-- Cigarettes Section -->
    <string name="cigarettes_today">cigarros hoy</string>
    <string name="cigarettes_remaining">Puedes fumar %d más</string>
    <string name="cigarettes_limit_reached">Intenta no fumar más</string>
    <string name="add_cigarette">+1</string>

    <!-- Points System Section -->
    <string name="points_title">Sistema de Puntos:</string>
    <string name="points_total">%d Puntos</string>
    <string name="category_daily_goals">Objetivos Diarios</string>
    <string name="category_schedule">Horario</string>
    <string name="category_todo">To-Do</string>
    <string name="category_cigarettes">Cigarros</string>
    <string name="category_bonus">Bonus</string>
    <string name="penalty_category">Penalizaciones</string>

</resources>